@@ -1,3 +1,9 @@
+2002-10-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (restack_windows):
+	(__get_visible_window):
+	fixed a stacking problem with layers
+
 2002-10-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/stack.c (mark_transient_subtree):
